# macroitems-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bppf_usage.md
data/: runs_fma.csv  runs_hfma.csv  runs_hima.csv  runs_homa.csv
examples/: macroitems_main.cpp
include/: macroitems.hpp
include/macroitems/: algo_dinkelbach.hpp  algo_forest.hpp  algo_in_forest.hpp  algo_out_forest.hpp  core.hpp  instance.hpp  lp.hpp  pckp_lp.hpp  result_writer.hpp  solution.hpp  yed_writer.hpp
scripts/: gen_instances.py  run_benchmark.py  run_benchmark_large.py  run_fig12_hfma_fma.py  run_fig14_hfma_large_inout.py  run_fig14_specialized_large.py  run_hfma_large_forest.py  run_hfma_medium.py
src/: algo_dinkelbach.cpp  algo_forest.cpp  algo_forest_noheap.cpp  algo_in_forest.cpp  algo_out_forest.cpp  instance.cpp  lp_highs.cpp  pckp_lp.cpp  result_writer.cpp  solution.cpp  yed_writer.cpp
tests/: macroitems_tests.cpp
